--- a/prosperityWebApp/prosperity/templates/buyPolicy/two.html
+++ b/prosperityWebApp/prosperity/templates/buyPolicy/two.html
@@ -94,5 +94,192 @@
             </div>
         </div>
     </div>
+
+    <div id="two_down">
+        <div id="two_down_top">
+            <p id="two_down_top_para">12 Years Plan Benefits</p>
+            <i class="bi-x-lg"></i>
+        </div>
+
+        <div id="two_down_div1">
+            <div id="two_down_div1_1">
+                <img src="{% static "media/incomeBenefits.png" %}" alt="">
+                <p>Income Benefit</p>
+            </div>
+
+            <p id="two_down_div1_2">The Guaranteed Income is  percentage of Guaranteed Maturity Benefit depending on your Age when policy is issued , income will be paid during the pay-out period
+                till the end of policy term provided the policy is in-force. </p>
+
+            <div id="two_down_div1_3">
+                <p id="two_down_div1_3_upper">For 7 Pay, 30 Year Policy Term </p>
+                <div style="top: 2.5vh; left: 0vw;" id="two_right_div1_2_inner1">
+                    <i class="bi-check"></i> 
+                    <p style="width: 27vw;">Pay for 7 years & get an annual income from <b>10th</b> year till policy term</p>
+                </div>
+            </div>
+
+            <div id="two_down_div1_4">
+                <p id="two_down_div1_3_upper">For 12 Pay, 45 Year Policy Term </p>
+                <div style="top: 2.5vh; left: 0vw;" id="two_right_div1_2_inner1">
+                    <i class="bi-check"></i> 
+                    <p style="width: 27vw;">Pay for 12 years & get an annual income from <b>15th</b>  year till policy term</p>
+                </div>
+            </div>
+
+            <div id="two_down_div1_5">
+                <p>EX- You have purchased 12 pay plan for 45 years with a annual premium of 1 Lakhs you will get an annual income of
+                    <b>₹ 1,04,750/-</b> <br>
+                    From 15th years till the policy term (45 years) 
+                </p>
+
+                <a href="">Learn More <i class="bi-arrow-right"></i></a>
+            </div>
+
+        </div>
+
+        <div id="two_down_div2">
+            <div id="two_down_div1_1">
+                <img src="{% static "media/incomeBenefits.png" %}" alt="">
+                <p>Income Benefit</p>
+            </div>
+
+            <p id="two_down_div1_2">The Guaranteed Income is  percentage of Guaranteed Maturity Benefit depending on your Age when policy is issued , income will be paid during the pay-out period
+                till the end of policy term provided the policy is in-force. </p>
+
+            <div id="two_down_div1_3">
+                <p id="two_down_div1_3_upper">For 7 Pay, 30 Year Policy Term </p>
+                <div style="top: 2.5vh; left: 0vw;" id="two_right_div1_2_inner1">
+                    <i class="bi-check"></i> 
+                    <p style="width: 27vw;">Pay for 7 years & get an annual income from <b>10th</b> year till policy term</p>
+                </div>
+            </div>
+
+            <div id="two_down_div1_4">
+                <p id="two_down_div1_3_upper">For 12 Pay, 45 Year Policy Term </p>
+                <div style="top: 2.5vh; left: 0vw;" id="two_right_div1_2_inner1">
+                    <i class="bi-check"></i> 
+                    <p style="width: 27vw;">Pay for 12 years & get an annual income from <b>15th</b>  year till policy term</p>
+                </div>
+            </div>
+
+            <div id="two_down_div1_5">
+                <p>EX- You have purchased 12 pay plan for 45 years with a annual premium of 1 Lakhs you will get an annual income of
+                    <b>₹ 1,04,750/-</b> <br>
+                    From 15th years till the policy term (45 years) 
+                </p>
+
+                <a href="">Learn More <i class="bi-arrow-right"></i></a>
+            </div>
+
+        </div>
+
+        <div id="two_down_div3">
+            <div id="two_down_div1_1">
+                <img src="{% static "media/incomeBenefits.png" %}" alt="">
+                <p>Income Benefit</p>
+            </div>
+
+            <p id="two_down_div1_2">The Guaranteed Income is  percentage of Guaranteed Maturity Benefit depending on your Age when policy is issued , income will be paid during the pay-out period
+                till the end of policy term provided the policy is in-force. </p>
+
+            <div id="two_down_div1_3">
+                <p id="two_down_div1_3_upper">For 7 Pay, 30 Year Policy Term </p>
+                <div style="top: 2.5vh; left: 0vw;" id="two_right_div1_2_inner1">
+                    <i class="bi-check"></i> 
+                    <p style="width: 27vw;">Pay for 7 years & get an annual income from <b>10th</b> year till policy term</p>
+                </div>
+            </div>
+
+            <div id="two_down_div1_4">
+                <p id="two_down_div1_3_upper">For 12 Pay, 45 Year Policy Term </p>
+                <div style="top: 2.5vh; left: 0vw;" id="two_right_div1_2_inner1">
+                    <i class="bi-check"></i> 
+                    <p style="width: 27vw;">Pay for 12 years & get an annual income from <b>15th</b>  year till policy term</p>
+                </div>
+            </div>
+
+            <div id="two_down_div1_5">
+                <p>EX- You have purchased 12 pay plan for 45 years with a annual premium of 1 Lakhs you will get an annual income of
+                    <b>₹ 1,04,750/-</b> <br>
+                    From 15th years till the policy term (45 years) 
+                </p>
+
+                <a href="">Learn More <i class="bi-arrow-right"></i></a>
+            </div>
+
+        </div>
+
+        <div id="two_down_div4">
+            <div id="two_down_div1_1">
+                <img src="{% static "media/incomeBenefits.png" %}" alt="">
+                <p>Income Benefit</p>
+            </div>
+
+            <p id="two_down_div1_2">The Guaranteed Income is  percentage of Guaranteed Maturity Benefit depending on your Age when policy is issued , income will be paid during the pay-out period
+                till the end of policy term provided the policy is in-force. </p>
+
+            <div id="two_down_div1_3">
+                <p id="two_down_div1_3_upper">For 7 Pay, 30 Year Policy Term </p>
+                <div style="top: 2.5vh; left: 0vw;" id="two_right_div1_2_inner1">
+                    <i class="bi-check"></i> 
+                    <p style="width: 27vw;">Pay for 7 years & get an annual income from <b>10th</b> year till policy term</p>
+                </div>
+            </div>
+
+            <div id="two_down_div1_4">
+                <p id="two_down_div1_3_upper">For 12 Pay, 45 Year Policy Term </p>
+                <div style="top: 2.5vh; left: 0vw;" id="two_right_div1_2_inner1">
+                    <i class="bi-check"></i> 
+                    <p style="width: 27vw;">Pay for 12 years & get an annual income from <b>15th</b>  year till policy term</p>
+                </div>
+            </div>
+
+            <div id="two_down_div1_5">
+                <p>EX- You have purchased 12 pay plan for 45 years with a annual premium of 1 Lakhs you will get an annual income of
+                    <b>₹ 1,04,750/-</b> <br>
+                    From 15th years till the policy term (45 years) 
+                </p>
+
+                <a href="">Learn More <i class="bi-arrow-right"></i></a>
+            </div>
+
+        </div>
+        
+        <div id="two_down_div5">
+            <div id="two_down_div1_1">
+                <img src="{% static "media/incomeBenefits.png" %}" alt="">
+                <p>Income Benefit</p>
+            </div>
+
+            <p id="two_down_div1_2">The Guaranteed Income is  percentage of Guaranteed Maturity Benefit depending on your Age when policy is issued , income will be paid during the pay-out period
+                till the end of policy term provided the policy is in-force. </p>
+
+            <div id="two_down_div1_3">
+                <p id="two_down_div1_3_upper">For 7 Pay, 30 Year Policy Term </p>
+                <div style="top: 2.5vh; left: 0vw;" id="two_right_div1_2_inner1">
+                    <i class="bi-check"></i> 
+                    <p style="width: 27vw;">Pay for 7 years & get an annual income from <b>10th</b> year till policy term</p>
+                </div>
+            </div>
+
+            <div id="two_down_div1_4">
+                <p id="two_down_div1_3_upper">For 12 Pay, 45 Year Policy Term </p>
+                <div style="top: 2.5vh; left: 0vw;" id="two_right_div1_2_inner1">
+                    <i class="bi-check"></i> 
+                    <p style="width: 27vw;">Pay for 12 years & get an annual income from <b>15th</b>  year till policy term</p>
+                </div>
+            </div>
+
+            <div id="two_down_div1_5">
+                <p>EX- You have purchased 12 pay plan for 45 years with a annual premium of 1 Lakhs you will get an annual income of
+                    <b>₹ 1,04,750/-</b> <br>
+                    From 15th years till the policy term (45 years) 
+                </p>
+
+                <a href="">Learn More <i class="bi-arrow-right"></i></a>
+            </div>
+
+        </div>
+    </div>
 </body>
 </html>
