buy Policy complete

--- a/prosperityWebApp/prosperity/templates/buyPolicy/one.html
+++ b/prosperityWebApp/prosperity/templates/buyPolicy/one.html
@@ -22,7 +22,35 @@
         <p id="one_para_two">Which You Need</p>
     </div>
 
-    <div></div>
+    <div>
+        <div class="form-check">
+            <label class="form-check-label" for="flexCheckChecked">
+                Protect Your Family
+            </label>
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" >
+        </div>
+
+        <div style="top: 25vh;" class="form-check">
+            <label class="form-check-label" for="flexCheckChecked">
+                More Growing Wealth
+            </label>
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked >
+        </div>
+
+        <div style="top: 28vh;" class="form-check">
+            <label class="form-check-label" for="flexCheckChecked">
+                Protect your family with Growing wealth
+            </label>
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" >
+        </div>
+
+        <div style="top: 31vh;" class="form-check">
+            <label class="form-check-label" for="flexCheckChecked">
+                Plan your Retirement
+            </label>
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" >
+        </div>
+    </div>
 
     <div>
         <a href="two" id="one_last_next">Next</a>
