--- a/prosperityWebApp/prosperity/static/bpOne.css
+++ b/prosperityWebApp/prosperity/static/bpOne.css
@@ -24,7 +24,7 @@
     position: absolute;
     width: 27vw;
     height: 5vh;
-    left: 589px;
+    left: 61vh;
     top: 180px;
     font-family: 'Poppins';
     font-style: normal;
@@ -42,7 +42,7 @@
     align-items: center;
     padding: 0px;
     gap: 10px;
-    width: 320px;
+    width: 20vw;
     height: 50px;
     background: #8381F7;
     border-radius: 10px;
@@ -52,8 +52,46 @@
     order: 0;
     flex-grow: 0;
     color: #fff;
+    font-weight: bolder;
+    font-size: 2vh;
     text-decoration: none;
     position: absolute;
-    top: 75vh;
-    left: 41vw;
+    top: 77vh;
+    left: 39vw;
+}
+
+
+.form-check{
+    left: 39vw;
+    width: 20vw;
+    height: 7vh;
+    top: 22vh;
+    /* text-align: center; */
+    background: #FFFFFF;
+    box-shadow: 0px 4px 20px rgb(44 88 255 / 10%);
+    border-radius: 10px;
+}
+
+.form-check-label{
+    position: absolute;
+    width: 16vw;
+    height: 21px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 21px;
+    left: 1vw;
+    top: 2vh;
+    text-transform: capitalize;
+    color: #5B6CAC;
+}
+
+#flexCheckChecked{
+    position: relative;
+    top: 1.5vh;
+    left: 17.5vw;
+    width: 1.5vw;
+    border: 1px #5B6CAC solid;
+    height: 3vh;
 }
