--- a/prosperity-backend-phase-2(1)/prosperity-backend-phase-2/profile/app/templates/profiles/profileDetails.html
+++ b/prosperity-backend-phase-2(1)/prosperity-backend-phase-2/profile/app/templates/profiles/profileDetails.html
@@ -16,12 +16,24 @@
     <link rel="stylesheet" href="{{ url_for('static', path='/navbar.css') }}">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>  
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <title>ProfileDetails</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+   
+    <style>
+        .spanclass{
+            font-size: 14px;
+          color: red;
+          margin-left: 20px;
+          padding: 9px;
+          border-radius: 7px;
+          
+          }
+    </style>
 
 </head>
 <body style="background: #F6F9FF">
@@ -60,40 +72,73 @@
              <a href="/profileAbout" class="grid-item" ><i  class="bi-info-circle"></i>About Us</a>
              <div style="margin-top: -10px"><button class="logout"><a href="/"><p style="margin-top:10px">Log Out</p></a></button></div>
         </div>
-        <form action="" method="POST" enctype="multipart/form-data"> 
+
+        <form name="form" id="jsform" action="" method="POST" enctype="multipart/form-data" onsubmit="return validateForm();"> 
+
             <div class="rightgrid">
                 <ul class="rightcol">
                     <li class="rightcollist">
                         <p>Name</p>
-                        <input name="name" style="margin-left: 20px;" type="text" placeHolder="Swapnil Nikam">
+                        <input name="name" style="margin-left: 20px;"  id="name" type="text" value="{{ user['name'] }}" placeHolder="Swapnil Nikam" required ><span class="spanclass" id="name_err"></span>
                     </li>
                     <li class="rightcollist">
                         <p>Profession</p>
-                        <input name="profession" style="margin-left: 20px;" type="text" placeHolder="UX Designer">
+                        <input id="profession" name="profession"  style="margin-left: 20px;"value="{{ user['profession'] }}"  type="text" placeHolder="UX Designer" required ><span class="spanclass"  id="pro_err"></span>
                     </li>
                     <li class="rightcollist">
                         <p>Mobile Number</p>
-                        <i style="color:#475897; font-size:20px;" class="bi-telephone-fill"></i><input name="number" type="number" placeHolder="+91 96198XXXXX">
+                        <i style="color:#475897; font-size:20px;"  class="bi-telephone-fill"></i><input   id="number" name="number" value="{{ user['number'] }}" type="tel" placeHolder="+91 96198XXXXX" required> <span class="spanclass"  id="mn_err"></span>
                     </li>
                     <li class="rightcollist">
                         <p>Email ID</p>
-                        <i style="color:#475897; font-size:20px;" class="bi-envelope-fill"></i><input name="email" type="email" placeHolder="Your Email?">
+                        <i style="color:#475897; font-size:20px;" class="bi-envelope-fill"></i><input required  name="email" id="email" value="{{ user['email'] }}" type="email" placeHolder="Your Email?">
                     </li>
                 </ul>
-
-                <button type="submit"> Submit</button>
+                
+                <input type="submit" value="submit">
               </div>
         </form>
-          
+
     </div>
+      
     
-      
-
-        
-    </div>
-      
-      
-      
-
 </body>
+
+<script type="text/javascript">
+
+    function clearError(){
+        document.getElementById("name_err").innerHTML = "";
+        document.getElementById("pro_err").innerHTML = "";
+        document.getElementById("mn_err").innerHTML = "";
+    }
+
+    function setError(id, error){
+        document.getElementById(id).innerHTML = error;
+    }
+
+    function validateForm(){
+        clearError();
+
+        var name = document.forms["form"]["name"].value;
+        var profession = document.forms["form"]["profession"].value;
+        var mn = document.forms["form"]["number"].value;
+        
+        var res = true;
+
+        if(name === null || name === "" || name.length <= 2){
+            setError("name_err","*Length of Name is too short...")
+            res = false;
+        }
+        if(profession === null  || profession === ""){
+            setError("pro_err", "*Profession can't be empty...")
+            res = false;
+        }
+        if( mn.length !== 10){
+            setError("mn_err", "*Mobile Number should be of 10-digits...")
+            res = false;
+        }
+        return res;
+    }    
+</script>
+
 </html>
