--- a/prosperityWebApp/prosperity/templates/measures/bp.html
+++ b/prosperityWebApp/prosperity/templates/measures/bp.html
@@ -67,23 +67,23 @@
         </div>
 
         <div id="bmi_left_bmi_div" style="top: -72vh; left: 18vw; width: 5vw;">
-            <a href="mes_bmi"> Blood Sugar  </a>
+            <a href="mes_bs"> Blood Sugar  </a>
         </div>
 
         <div id="bmi_left_bmi_div" style="top: -62vh;">
-            <a href="mes_bmi"> Immunity</a>
+            <a href="mes_immunity"> Immunity</a>
         </div>
 
         <div id="bmi_left_bmi_div" style="top: -51vh; left: 17vw; width: 6vw;">
-            <a href="mes_bmi"> Mental Health </a>
+            <a href="mes_mentalHealth"> Mental Health </a>
         </div>
 
         <div  id="bmi_left_bmi_div" style="top: -40vh;">
-            <a href="mes_bmi"> Eye Vision </a>
+            <a href="mes_eyeVision"> Eye Vision </a>
         </div>
 
         <div id="bmi_left_bmi_div" class="bmi_left_bmi_div_12" style="top: -30vh; width: 5vw; height: 4vh; left: 17.5vw;">
-            <a href="mes_bmi" style="font-size: 13px; width: 7vw;"> Medication & Other Intake</a>
+            <a href="mes_medication" style="font-size: 13px; width: 7vw;"> Medication & Other Intake</a>
         </div>
     </div>  
 
