--- a/prosperityWebApp/prosperity/templates/measures/eyeTest1.html
+++ b/prosperityWebApp/prosperity/templates/measures/eyeTest1.html
@@ -88,37 +88,32 @@
     </div>  
 
     <div id="hr_middle">
-        <div id="hr_middle_div1">
-            <p id="hr_middle_div1_para1" style="width:15vw;">Calories</p>
-            <a href=""><i class="bi-arrow-repeat"></i></a>
+
+        <img id="steps_middle_div2" src="{% static "media/mes_eyeTest1.png" %}" alt="" style="top: -180vh;">
+
+      
+        <div id="bp_middle_div7" style="top: 82vh;">
+            <input type="text" name="" id="" placeholder="Type Word That on the Screen" style=" position: absolute;
+            width: 22.5vw;
+            height: 7vh;
+            font-family: 'Poppins';
+            background: #FFFFFF;
+            box-shadow: 0px 4px 20px rgba(44, 88, 255, 0.1);
+            border-radius: 10px;
+            color: #5B6CAC;
+            top: 14vh;
+            left: 0vw;
+            padding: 21px;
+            font-size: 1.6vh;
+            text-decoration: none;
+            display:flex;
+            border: 0px;
+            font-weight: 700;">
         </div>
 
-        <img id="steps_middle_div2" src="{% static "media/mes_cal.png" %}" alt="">
+        
 
-        <div id="steps_middle_div3">
-            <p>Today</p>
-            <p style="left: 17vw;">04/05/22</p>
-        </div>
-
-        <div id="cal_middle_div4">
-            <p id="cal_middle_div3_para1">Breakfast</p>
-            <input type="text" id="cal_middle_div3_input" placeholder="2 Roti, Sabji (600 kcal)">
-            <p id="cal_middle_div3_para2">Upload your Meal</p>
-        </div>
-
-        <div id="cal_middle_div4" style="top: 89vh;">
-            <p id="cal_middle_div3_para1">Lunch</p>
-            <input type="text" id="cal_middle_div3_input" placeholder="2 Roti, Sabji (600 kcal)">
-            <p id="cal_middle_div3_para2">Upload your Meal</p>
-        </div>
-
-        <div id="cal_middle_div4" style="top: 108vh;">
-            <p id="cal_middle_div3_para1">Dinner</p>
-            <input type="text" id="cal_middle_div3_input" placeholder="2 Roti, Sabji (600 kcal)">
-            <p id="cal_middle_div3_para2">Upload your Meal</p>
-        </div>
-
-        <input style="left: 38.5vw; top: 127vh; position: absolute;" type="submit" name="" id="steps_middle_div6" value="Record">
+        <input type="submit" name="" id="steps_middle_div6" value="Next" style="top: -129vh; left: 14.5vw; font-weight: 700;">
     </div>
 
     <div id="hr_right">
@@ -134,6 +129,11 @@
         </div>
     </div>
 
+    
+
+    
+
+   
 
 </body>
 </html>
