--- a/prosperityWebApp/prosperity/templates/measures/eyeTest3.html
+++ b/prosperityWebApp/prosperity/templates/measures/eyeTest3.html
@@ -88,37 +88,83 @@
     </div>  
 
     <div id="hr_middle">
-        <div id="hr_middle_div1">
-            <p id="hr_middle_div1_para1" style="width:15vw;">Calories</p>
-            <a href=""><i class="bi-arrow-repeat"></i></a>
+
+        <img id="steps_middle_div2" src="{% static "media/mes_eyeTest3.png" %}" alt="" style="top: -180vh;">
+
+      
+        <div id="bp_middle_div7" style="top: 91vh;">
+            <p id="eT3_middle_div7" style="box-sizing: box-sizing: border-box;
+            position: absolute;
+            width: 3.7vw;
+            height: 6.5vh;
+            opacity: 0.2;
+            border: 1px solid #5B6CAC;
+            filter: drop-shadow(0px 4px 20px rgba(44, 88, 255, 0.1));
+            border-radius: 10px;
+            top: -23vh;
+            left: 10vw;
+            font-family: 'Poppins';
+            text-align: center;
+            padding: 15px;
+            font-size: 2vh;
+            font-weight: 700;">E</p>
+
+            <button onclick="colorChange("arr1","i1")" id="arr1" type="text" style="position: absolute;
+            width: 3.7vw;
+            height: 6.5vh;
+            top: -23vh;
+            left: 3vw;
+            background: #FFFFFF;
+            box-shadow: 0px 4px 20px rgba(44, 88, 255, 0.1);
+            border-radius: 10px;
+            display: flex;
+            border: 0px;"><i id="i1" class="bi-arrow-left" style="font-size: 3vh;
+            padding: 9px 21px;
+            color: #5B6CAC;"></i> </button>
+
+            <div id="arr2" onclick="colorChange("arr2","i2")" type="text" style="position: absolute;
+            width: 3.7vw;
+            height: 6.5vh;
+            top: -23vh;
+            left: 17vw;
+            background: #FFFFFF;
+            box-shadow: 0px 4px 20px rgba(44, 88, 255, 0.1);
+            border-radius: 10px;
+            display: flex;
+            border: 0px;"><i id="i2" class="bi-arrow-right" style="font-size: 3vh;
+            padding: 9px 21px;
+            color: #5B6CAC;"></i></div>
+
+            <div type="text" style="position: absolute;
+            width: 3.7vw;
+            height: 6.5vh;
+            top: -35vh;
+            left: 10vw;
+            background: #FFFFFF;
+            box-shadow: 0px 4px 20px rgba(44, 88, 255, 0.1);
+            border-radius: 10px;
+            display: flex;
+            border: 0px;"><i class="bi-arrow-up" style="font-size: 3vh;
+            padding: 9px 21px;
+            color: #5B6CAC;"></i></div>
+
+            <div type="text" style="position: absolute;
+            width: 3.7vw;
+            height: 6.5vh;
+            top: -11vh;
+            left: 10vw;
+            background: #FFFFFF;
+            box-shadow: 0px 4px 20px rgba(44, 88, 255, 0.1);
+            border-radius: 10px;
+            display: flex;
+            border: 0px;"><i class="bi-arrow-down" style="font-size: 3vh;
+            padding: 9px 21px;
+            color: #5B6CAC;"></i></div>
         </div>
 
-        <img id="steps_middle_div2" src="{% static "media/mes_cal.png" %}" alt="">
+        
 
-        <div id="steps_middle_div3">
-            <p>Today</p>
-            <p style="left: 17vw;">04/05/22</p>
-        </div>
-
-        <div id="cal_middle_div4">
-            <p id="cal_middle_div3_para1">Breakfast</p>
-            <input type="text" id="cal_middle_div3_input" placeholder="2 Roti, Sabji (600 kcal)">
-            <p id="cal_middle_div3_para2">Upload your Meal</p>
-        </div>
-
-        <div id="cal_middle_div4" style="top: 89vh;">
-            <p id="cal_middle_div3_para1">Lunch</p>
-            <input type="text" id="cal_middle_div3_input" placeholder="2 Roti, Sabji (600 kcal)">
-            <p id="cal_middle_div3_para2">Upload your Meal</p>
-        </div>
-
-        <div id="cal_middle_div4" style="top: 108vh;">
-            <p id="cal_middle_div3_para1">Dinner</p>
-            <input type="text" id="cal_middle_div3_input" placeholder="2 Roti, Sabji (600 kcal)">
-            <p id="cal_middle_div3_para2">Upload your Meal</p>
-        </div>
-
-        <input style="left: 38.5vw; top: 127vh; position: absolute;" type="submit" name="" id="steps_middle_div6" value="Record">
+        <input type="submit" name="" id="steps_middle_div6" value="Next" style="top: -122vh; left: 15vw; font-weight: 700;">
     </div>
 
     <div id="hr_right">
@@ -134,6 +180,19 @@
         </div>
     </div>
 
+    
+
+    <script>
+        
+
+        function colorChange(id1, id2){
+            document.getElementById(id1).style.background =  "#5B6CAC";
+            document.getElementById(id2).style.color = "#FFF";
+        }
+
+    </script>
+
+   
 
 </body>
 </html>
