--- a/prosperityWebApp/prosperity/templates/measures/mentalHealth.html
+++ b/prosperityWebApp/prosperity/templates/measures/mentalHealth.html
@@ -89,36 +89,34 @@
 
     <div id="hr_middle">
         <div id="hr_middle_div1">
-            <p id="hr_middle_div1_para1" style="width:15vw;">Calories</p>
+            <p id="hr_middle_div1_para1" style="width: 18vw;">Mental Health</p>
             <a href=""><i class="bi-arrow-repeat"></i></a>
         </div>
 
-        <img id="steps_middle_div2" src="{% static "media/mes_cal.png" %}" alt="">
+        <img id="steps_middle_div2" src="{% static "media/mes_mentalHealth.png" %}" alt="">
 
-        <div id="steps_middle_div3">
-            <p>Today</p>
-            <p style="left: 17vw;">04/05/22</p>
+      
+        <div id="bp_middle_div7" style="top: 60vh;">
+            <label for="reports">Puzzle Games</label>
+            <a id="mentalHealth_StartGame" href="" style=" position: absolute;
+            width: 20.5vw;
+            height: 6vh;
+            font-family: 'Poppins';
+            background: #FFFFFF;
+            box-shadow: 0px 4px 20px rgba(44, 88, 255, 0.1);
+            border-radius: 10px;
+            color: #5B6CAC;
+            top: 6vh;
+            left: 1vw;
+            text-align: center;
+            padding: 14px;
+            font-size: 2vh;
+            text-decoration: none;
+            font-weight: 700;">Start Game</a>
+            
         </div>
 
-        <div id="cal_middle_div4">
-            <p id="cal_middle_div3_para1">Breakfast</p>
-            <input type="text" id="cal_middle_div3_input" placeholder="2 Roti, Sabji (600 kcal)">
-            <p id="cal_middle_div3_para2">Upload your Meal</p>
-        </div>
-
-        <div id="cal_middle_div4" style="top: 89vh;">
-            <p id="cal_middle_div3_para1">Lunch</p>
-            <input type="text" id="cal_middle_div3_input" placeholder="2 Roti, Sabji (600 kcal)">
-            <p id="cal_middle_div3_para2">Upload your Meal</p>
-        </div>
-
-        <div id="cal_middle_div4" style="top: 108vh;">
-            <p id="cal_middle_div3_para1">Dinner</p>
-            <input type="text" id="cal_middle_div3_input" placeholder="2 Roti, Sabji (600 kcal)">
-            <p id="cal_middle_div3_para2">Upload your Meal</p>
-        </div>
-
-        <input style="left: 38.5vw; top: 127vh; position: absolute;" type="submit" name="" id="steps_middle_div6" value="Record">
+        <input type="submit" name="" id="steps_middle_div6" value="Record" style="top: -150vh; left: 14.5vw;">
     </div>
 
     <div id="hr_right">
@@ -134,6 +132,11 @@
         </div>
     </div>
 
+    
+
+    
+
+   
 
 </body>
 </html>
